syntax = "proto3";

package attrpubapi_v1;

import "ContentType.proto";

message AttributeSigning {
	string name = 1;
	bytes value = 2;
	ContentType content_type = 3;
	bytes artifact_signature = 4;
	string sub_type = 5;
	bytes signed_time_stamp = 6;
	string associated_source = 7;
}
